# Flow

./: .gitignore  README.md  config.py  demo.webm  index.html  install.sh  main.py  ping.py  pyproject.toml  requirements.txt  test.py  tui.py
.github/workflows/: release.yaml
Offline/: commands.py  file.py  player.py
Online/: commands.py  player.py
flow_twinx/: config.py  help_detail.py  imports.py  lyrics.py  main.py  ping.py  shortcuts.py  tui.py  visualizer.py
flow_twinx/Offline/: __init__.py  commands.py  file.py  player.py
flow_twinx/Online/: __init__.py  commands.py  player.py  savan.py  youtube.py
flow_twinx/web/: app.py  devlog.py
flow_twinx/web/templates/: index.html  script.js  setting.html  style.css
