[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-twinx"
version = "0.4.7"
description = "A terminal music player with online and offline modes"
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["dependencies"]

[project.scripts]
flow = "flow_twinx.main:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["flow_twinx*"]

[tool.setuptools.package-data]
flow_twinx = ["web/templates/*"]

[project.urls]
Homepage = "https://github.com/philast-015/flow/"
Issues = "https://github.com/philast-015/flow/issues"
